# schain-neo

./: README.md  controller.drawio  pyproject.toml  read_processing.py  setup.py  spectra_processing.py  test_processing.py
schainc/: _HS_algorithm.c  _noise.c
schainpy/: __init__.py  admin.py  controller.py
schainpy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
schainpy/cli/: cli.py
schainpy/model/data/: BLTRheaderIO.py  __init__.py  jroamisr.py  jrodata.py  jroheaderIO.py
schainpy/model/graphics/: __init__.py  jroplot_base.py  jroplot_correlation.py  jroplot_heispectra.py  jroplot_parameters.py  jroplot_spectra.py  jroplot_spectra_.py  jroplot_voltage.py  jroplot_voltage_lags.py  plotting_codes.py
schainpy/model/io/: MIRAtest.py  __init__.py  bltrIO_param.py  bltrIO_spectra.py  jroIO_amisr.py  jroIO_base.py  jroIO_dat.py  jroIO_digitalRF_.py  jroIO_heispectra.py  jroIO_hf.py  jroIO_kamisr.py  jroIO_madrigal.py  jroIO_matlab.py  jroIO_mira35c.py  jroIO_param.py  jroIO_simulator.py  jroIO_spectra.py  jroIO_usrp.py  jroIO_usrp_api.py  jroIO_voltage.py  julIO_param.py  pxIO_param.py
schainpy/model/proc/: __init__.py  bltrproc_parameters.py  jroproc_amisr.py  jroproc_base.py  jroproc_correlation.py  jroproc_heispectra.py  jroproc_parameters.py  jroproc_spectra.py  jroproc_spectra_acf.py  jroproc_spectra_lags.py  jroproc_spectra_lags_faraday.py  jroproc_voltage.py  jroproc_voltage_lags.py  modelSpectralFitting.py  pxproc_parameters.py
schainpy/model/utils/: jroutils_ftp.py  jroutils_publish.py  scp.py
